# pytest-backend

./: .gitattributes  .gitignore  .workflow-patcher.yml  README.md  SECURITY.md  noxconfig.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml  merge-gate.yml  periodic-validation.yml  slow-checks-itde.yml  slow-checks-saas.yml  slow-checks.yml
doc/: conf.py  index.rst
doc/changes/: changelog.md  changes_1.4.0.md  changes_1.4.1.md  changes_1.5.0.md  changes_1.5.1.md  unreleased.md
exasol/pytest_backend/: __init__.py  itde.py  parallel_task.py  project_short_tag.py  version.py
test/integration/: pytest_backend_test.py
test/unit/: test_itde.py  test_project_short_tag.py  test_saas_fixture.py
