[project]
name = "pytest-exasol-backend"
version = "1.5.1"
description = ""
authors = [{ name = "Mikhail Beck", email = "mikhail.beck@exasol.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pytest>=9,<10",
    "exasol-integration-test-docker-environment>=4.3,<7",
    "exasol-saas-api>=2.8,<3",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [{include = "exasol"}]

[project.entry-points.pytest11]
backend = "exasol.pytest_backend"

[dependency-groups]
dev = [
    "exasol-toolbox>=10.0.0,<11",
    "exasol-bucketfs>=1.0.0",
    "pyexasol>=1, <3",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["poetry_core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 15

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 6.1
output-format = "colorized,json:.lint.json,text:.lint.txt"

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F",    # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D",  # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.sonar]
projectKey = "com.exasol:pytest-backend"
host.url = "https://sonarcloud.io"
organization = "exasol"
sonar.tests = "test"
